--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Binaries for programs and plugins
-/release
+/dist
 *.exe
 *.exe~
 *.dll
@@ -12,9 +12,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependencies
-/vendor
+# Dependency directories
+.bin/
+vendor/
 
-# Runtime folders
-/.env
-/data
+# Development environment
+.dev/
+.env/
+.envrc
